k8s/twitter-clone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twc-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter-clone
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: twitter-clone
    spec:
      containers:
      - name: twc-pod
        image: ghcr.io/haitrungle/cst8277-twc:0.1
        ports:
        - containerPort: 9876
---
apiVersion: v1
kind: Service
metadata:
  name: twc-svc
  labels:
    app: twitter-clone
spec:
  type: NodePort
  ports:
  - port: 9876
    nodePort: 30002
    targetPort: 9876
    protocol: TCP
  selector:
    app: twitter-clone
