k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /twc
            pathType: Prefix
            backend:
              service:
                name: twc-svc
                port:
                  number: 9876
          - path: /usm
            pathType: Prefix
            backend:
              service:
                name: usm-svc
                port:
                  number: 8080
